[package]
name = "cosmos_coin"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.3.1"
cw20-base = { version = "1.0.0", features = ["library"] }
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.127"
